# stackoverflow-cmake-find-link-example

./: README.md  build.sh
myexe/: CMakeLists.txt  main.c
mylib/: CMakeLists.txt  mylib.c
mylib/include/: mylib.h
